# VPKParser

./: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  README.md  VPKParser.hpp
src/: errors.hpp  vpk.cpp  vpk.hpp
src/helpers/: case-insensitive-map.cpp  case-insensitive-map.hpp  check-bounds.hpp  offset-data-view.cpp  offset-data-view.hpp
src/structs/: directory-entry.hpp  header.hpp  headers.hpp
